--- a/Dia4/src/app/app.component.html
+++ b/Dia4/src/app/app.component.html
@@ -1,13 +1,10 @@
-<div class="container">
-  <div style="display: block">
-    <canvas baseChart
-            [data]="pieChartData"
-            [labels]="pieChartLabels"
-            [chartType]="pieChartType"
-            (chartHover)="chartHovered($event)"
-            (chartClick)="chartClicked($event)"></canvas>
+<app-navbar></app-navbar>
+<div class="row">
+  <div class="col-6">
+    <app-chart-pie></app-chart-pie>
   </div>
-  <h4>{{ comparacion }}</h4>
-  <h4 *ngIf="pieChartData[0] < pieChartData[1]"> Ganan los Hombres </h4>
-  <h4 *ngIf="pieChartData[0] > pieChartData[1]"> Ganan las Mujeres </h4>
+  <div class="col-6">
+    <app-chart-pie></app-chart-pie>
+  </div>
 </div>
+
